# wk-iced

./: Cargo.toml  flake.nix
src/: action.rs  fuzzy.rs  main.rs  parse_places.rs
